--- a/perseu_escola/pom.xml
+++ b/perseu_escola/pom.xml
@@ -45,18 +45,25 @@
 	
 		<spring.version>3.2.10.RELEASE</spring.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
-		
 		<hibernate.version>4.2.15.Final</hibernate.version>
 		<hibernate-validator.version>4.3.2.Final</hibernate-validator.version>
-	
-	
-<!--  		<spring.version>3.1.1.RELEASE</spring.version>  -->
-<!-- 		<spring.security.version>3.0.3.RELEASE</spring.security.version> -->
-<!-- 		<hibernate.version>3.5.6-Final</hibernate.version> -->
-	
-		<slf4j.version>1.5.10</slf4j.version>
-		<logback.version>0.9.15</logback.version>
-		<jsf.version>2.1.7</jsf.version>
+		<hibernate-jpa.version>1.0.1.Final</hibernate-jpa.version>
+		<primefaces.version>5.0</primefaces.version>
+		<primefaces.extensions.version>2.0.0</primefaces.extensions.version>
+		<primefaces.mirror.version>2.0.0</primefaces.mirror.version>
+		<commons-dbcp.version>1.4</commons-dbcp.version>
+		<commons-fileupload.version>1.3</commons-fileupload.version>
+		<commons-io.version>2.4</commons-io.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<logback.version>1.1.2</logback.version>
+		<jsf.version>2.2</jsf.version>
+		<cglib.version>3.0</cglib.version>
+		<org.glassfish.version>2.2.8</org.glassfish.version>
+		<javax.servlet.version>3.1.0</javax.servlet.version>
+		<jta.version>1.1</jta.version>
+		<org.postgresql.version>9.3-1100-jdbc41</org.postgresql.version>
+		<junit.version>4.11</junit.version>
+		<jasperreport.version>5.6.0</jasperreport.version>
 	
 	</properties>
 
@@ -162,57 +169,58 @@
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>1.2.2</version>
+			<version>${commons-dbcp.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2.2</version>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.2</version>
+			<version>${commons-io.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.3-1100-jdbc41</version>
+			<version>${org.postgresql.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
-			<version>2.2</version>
+			<version>${cglib.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>3.5</version>
+			<version>${primefaces.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.primefaces.extensions</groupId>
 			<artifactId>primefaces-extensions</artifactId>
-			<version>0.5.1</version>
+			<version>${primefaces.extensions.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.primefaces.extensions</groupId>
 			<artifactId>resources-codemirror</artifactId>
-			<version>0.5.1</version>
+			<version>${primefaces.mirror.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
-			<version>2.1.9</version>
+			<version>${org.glassfish.version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<version>${javax.servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -220,7 +228,7 @@
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
+			<version>${hibernate-jpa.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -237,7 +245,7 @@
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
-			<version>1.1</version>
+			<version>${jta.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -259,7 +267,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Para importacao de XML usado no plano de contas -->
@@ -275,7 +283,7 @@
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>5.5.0</version>
+			<version>${jasperreport.version}</version>
 		</dependency>
 
 		<!-- JSTL -->
