--- a/perseu_escola/pom.xml
+++ b/perseu_escola/pom.xml
@@ -274,7 +274,7 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>3.8-beta5</version>
+			<version>3.10-FINAL</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -333,37 +333,37 @@
 		<!--  Integrando Jersey com Spring -->
 		
 		<!-- Jersey + Spring -->
-		<dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-spring</artifactId>
-			<version>1.8</version>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.sun.jersey.contribs</groupId> -->
+<!-- 			<artifactId>jersey-spring</artifactId> -->
+<!-- 			<version>1.8</version> -->
 			
-			<!-- O download do Jersey-Spring baixa spring 2.5 então para usar o spring mais atual 
-			deve-se excluir os módulos abaixos
-			  -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-web</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-beans</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-context</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+			<!-- O download do Jersey-Spring baixa spring 2.5 então para usar o spring mais atual -->
+<!-- 			deve-se excluir os módulos abaixos -->
+<!-- 			  --> 
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>spring</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>spring-core</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>spring-web</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>spring-beans</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>spring-context</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
  
 
 	</dependencies>
