--- a/perseu_escola/pom.xml
+++ b/perseu_escola/pom.xml
@@ -42,7 +42,7 @@
 	</profiles>
 
 	<properties>
-	
+
 		<spring.version>3.2.10.RELEASE</spring.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
 		<hibernate.version>4.2.15.Final</hibernate.version>
@@ -64,7 +64,7 @@
 		<org.postgresql.version>9.3-1100-jdbc41</org.postgresql.version>
 		<junit.version>4.11</junit.version>
 		<jasperreport.version>5.6.0</jasperreport.version>
-	
+
 	</properties>
 
 	<build>
@@ -216,7 +216,7 @@
 			<artifactId>javax.faces</artifactId>
 			<version>${org.glassfish.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -321,50 +321,56 @@
 			<version>2.1.3</version>
 		</dependency>
 
-
-		<!-- Web Service JAX-RS (Jersey)-->
-
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>1.8</version>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-broker</artifactId>
+			<version>5.10.0</version>
 		</dependency>
-		
-		<!--  Integrando Jersey com Spring -->
-		
+
+		<!-- Web Service JAX-RS (Jersey) -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.sun.jersey</groupId> -->
+		<!-- <artifactId>jersey-server</artifactId> -->
+		<!-- <version>1.8</version> -->
+		<!-- </dependency> -->
+
+		<!-- Integrando Jersey com Spring -->
+
 		<!-- Jersey + Spring -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.sun.jersey.contribs</groupId> -->
-<!-- 			<artifactId>jersey-spring</artifactId> -->
-<!-- 			<version>1.8</version> -->
-			
-			<!-- O download do Jersey-Spring baixa spring 2.5 então para usar o spring mais atual -->
-<!-- 			deve-se excluir os módulos abaixos -->
-<!-- 			  --> 
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring-core</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring-web</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring-beans</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring-context</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
-<!-- 		</dependency> -->
- 
+		<!-- <dependency> -->
+		<!-- <groupId>com.sun.jersey.contribs</groupId> -->
+		<!-- <artifactId>jersey-spring</artifactId> -->
+		<!-- <version>1.8</version> -->
+
+		<!-- O download do Jersey-Spring baixa spring 2.5 então para usar o spring 
+			mais atual -->
+		<!-- deve-se excluir os módulos abaixos -->
+		<!-- -->
+		<!-- <exclusions> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-core</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-web</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-beans</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-context</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- </exclusions> -->
+		<!-- </dependency> -->
+
 
 	</dependencies>
 
