--- a/perseu_escola/pom.xml
+++ b/perseu_escola/pom.xml
@@ -241,6 +241,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.transaction</groupId>
