Banco de dados carga inicial

--- a/perseu_escola/src/main/resources/app.properties
+++ b/perseu_escola/src/main/resources/app.properties
@@ -8,3 +8,7 @@ jdbc.password=postgres
 hibernate.generate_ddl=true
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc\:postgresql\://54.94.208.202/perseuescola2
+#jdbc.password=htcursos#2015
