Erro da Poliana consertado "Correcao Solicitacao Poliane"

--- a/perseu_escola/src/main/resources/app.properties
+++ b/perseu_escola/src/main/resources/app.properties
@@ -3,7 +3,7 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/perseuescola2
 jdbc.username=postgres
-jdbc.password=postgres
+jdbc.password=chan
 
 hibernate.generate_ddl=true
 hibernate.show_sql=true
